use array of tokens in fitExpression to ensure no line breaks in numbers, use smaller font for expression when long numbers present

--- a/src/styles/Expression.module.css
+++ b/src/styles/Expression.module.css
@@ -19,3 +19,8 @@
   left: -9999px;
   font-size: 2rem;
 }
+
+/* Must come after .expression and .testExpressionLine to override both */
+.longNum {
+  font-size: 1.575rem;
+}
